[gd_scene load_steps=32 format=3 uid="uid://bs4w6cknxuc3"]

[ext_resource type="FontFile" uid="uid://dk7xxcpv0l3gl" path="res://assets/fonts/Ultra-Regular.ttf" id="1_yk4l7"]
[ext_resource type="Script" path="res://scripts/PlayerUI.gd" id="2_2n16t"]
[ext_resource type="Texture2D" uid="uid://daowynull4mkt" path="res://assets/ui/PokerTableUI/PokerTableBackground.png" id="2_5wwt0"]
[ext_resource type="Texture2D" uid="uid://r0280w8dbd0i" path="res://assets/table/dealer_button.png" id="2_e42vm"]
[ext_resource type="Script" path="res://scripts/WinnerPopup.gd" id="2_gy7rh"]
[ext_resource type="Script" path="res://scripts/GameManager.gd" id="3_7l7kt"]
[ext_resource type="Script" path="res://scripts/ActionUI.gd" id="3_gh18n"]
[ext_resource type="Theme" uid="uid://c5y30tb5md0qt" path="res://scenes/PlayerPanel.tres" id="5_sdmxq"]
[ext_resource type="PackedScene" uid="uid://dhyb7q1k4sgv3" path="res://scenes/AvatarScene.tscn" id="6_5d3nm"]
[ext_resource type="Theme" uid="uid://ncsyvbfrm621" path="res://SecondaryButtonTheme.tres" id="7_krkxb"]
[ext_resource type="Theme" uid="uid://5hj6pfvbsvck" path="res://ActionButtonTheme.tres" id="8_d8q51"]
[ext_resource type="Theme" uid="uid://c5i23lajnkrcf" path="res://scenes/TablePanels.tres" id="8_mo4it"]
[ext_resource type="FontFile" uid="uid://cxfqy12gmgcfg" path="res://assets/fonts/ApercuMonoProRegular.ttf" id="8_tmb2x"]
[ext_resource type="PackedScene" uid="uid://7yecnsfsjmov" path="res://scenes/ChipStackDisplay.tscn" id="9_msske"]
[ext_resource type="Texture2D" uid="uid://ebxpcx8h4mpn" path="res://assets/ui/AvatarPanelBorder.png" id="10_5g7l1"]
[ext_resource type="Texture2D" uid="uid://b3d2c5di3jkgq" path="res://assets/ui/PokerTableUI/AvatarBackground.png" id="10_vywew"]
[ext_resource type="Theme" uid="uid://dk1wnv3orabg3" path="res://SpinBoxTheme.tres" id="11_xotbv"]
[ext_resource type="Texture2D" uid="uid://bfpx1otnbvkio" path="res://assets/ui/BlackjackPlayerNamePanel.png" id="13_t8b8a"]
[ext_resource type="Texture2D" uid="uid://bkntnbcqk57kv" path="res://assets/ui/ChipBalanceBorder.png" id="14_jx1aq"]
[ext_resource type="Script" path="res://scripts/ChipStackDisplay.gd" id="14_xfeto"]
[ext_resource type="Texture2D" uid="uid://bmaw5pfhslc83" path="res://assets/ui/PokerTableUI/PlayerLevelBar.png" id="15_ywrf8"]
[ext_resource type="PackedScene" uid="uid://bqybiqexsjp8u" path="res://scenes/BookButton.tscn" id="19_85r61"]
[ext_resource type="PackedScene" uid="uid://dtfjqwhwmtl0u" path="res://scenes/PotChipDisplay.tscn" id="20_rbrap"]
[ext_resource type="Texture2D" uid="uid://bplephmnbtsbq" path="res://assets/ui/PokerTableUI/PokerTableSurface.png" id="21_t31r1"]
[ext_resource type="Texture2D" uid="uid://ba2xck1wg8op7" path="res://assets/ui/PokerTableUI/PokerTableWoodBorder.png" id="22_lhljp"]
[ext_resource type="Texture2D" uid="uid://bqh3rg3i66m88" path="res://assets/ui/PokerTableUI/RaiseBarGrabber.png" id="24_ye770"]

[sub_resource type="Theme" id="Theme_e33w3"]
default_font = ExtResource("1_yk4l7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwkpu"]
bg_color = Color(0.913725, 0.290196, 0.266667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7nkd"]
bg_color = Color(0.913725, 0.290196, 0.266667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7yw1c"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.980392, 0.945098, 0.603922, 1)
border_width_left = 15
border_width_right = 15
border_color = Color(0.980392, 0.945098, 0.603922, 1)

[sub_resource type="Theme" id="Theme_ei1b7"]
VSlider/icons/grabber = null
VSlider/styles/grabber_area = SubResource("StyleBoxFlat_uwkpu")
VSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_m7nkd")
VSlider/styles/slider = SubResource("StyleBoxFlat_7yw1c")

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = SubResource("Theme_e33w3")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(874, 402)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 874.0
offset_bottom = 402.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5wwt0")
expand_mode = 1

[node name="PokerTableSurface" type="TextureRect" parent="."]
custom_minimum_size = Vector2(568, 291)
layout_mode = 0
offset_left = 102.0
offset_top = 55.0
offset_right = 670.0
offset_bottom = 346.0
texture = ExtResource("21_t31r1")
expand_mode = 1

[node name="PokerTableBorder" type="TextureRect" parent="."]
custom_minimum_size = Vector2(568, 291)
layout_mode = 0
offset_left = 102.0
offset_top = 55.0
offset_right = 670.0
offset_bottom = 346.0
texture = ExtResource("22_lhljp")
expand_mode = 1

[node name="CommunityCards" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(225, 55)
layout_mode = 0
offset_left = 256.0
offset_top = 167.0
offset_right = 481.0
offset_bottom = 222.0
theme_override_constants/separation = 8

[node name="Card1" type="TextureRect" parent="CommunityCards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Card2" type="TextureRect" parent="CommunityCards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Card3" type="TextureRect" parent="CommunityCards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Card4" type="TextureRect" parent="CommunityCards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Card5" type="TextureRect" parent="CommunityCards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="HandStrengthLabel" type="Label" parent="."]
custom_minimum_size = Vector2(220, 55)
layout_mode = 0
offset_left = 288.0
offset_top = 230.0
offset_right = 343.0
offset_bottom = 285.0
theme_override_fonts/font = ExtResource("8_tmb2x")
theme_override_font_sizes/font_size = 10
autowrap_mode = 3

[node name="WinnerPopup" type="ColorRect" parent="."]
custom_minimum_size = Vector2(55, 55)
layout_mode = 0
offset_left = 288.0
offset_top = 104.0
offset_right = 343.0
offset_bottom = 159.0
color = Color(0.388235, 0.388235, 0.388235, 0)
script = ExtResource("2_gy7rh")

[node name="WinnerLabel" type="Label" parent="WinnerPopup"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 0
offset_right = 55.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 10

[node name="Players" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Player1" type="Control" parent="Players"]
anchors_preset = 0
script = ExtResource("2_2n16t")

[node name="Panel" type="Panel" parent="Players/Player1"]
layout_mode = 0
theme = ExtResource("5_sdmxq")

[node name="ChipStackDisplay" parent="Players/Player1/Panel" instance=ExtResource("9_msske")]
position = Vector2(180, -60)
scale = Vector2(0.3, 0.3)

[node name="AvatarBackground" type="TextureRect" parent="Players/Player1/Panel"]
custom_minimum_size = Vector2(105, 105)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 441.0
offset_bottom = 375.0
texture = ExtResource("10_vywew")
expand_mode = 1

[node name="AvatarBorder" type="TextureRect" parent="Players/Player1/Panel"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 441.0
offset_bottom = 375.0
texture = ExtResource("10_5g7l1")
expand_mode = 1

[node name="AvatarViewport" type="SubViewport" parent="Players/Player1/Panel"]
transparent_bg = true
size = Vector2i(180, 280)

[node name="AvatarScene" parent="Players/Player1/Panel/AvatarViewport" instance=ExtResource("6_5d3nm")]
custom_minimum_size = Vector2(180, 240)
offset_top = 90.0
offset_right = 180.0
offset_bottom = 330.0
scale = Vector2(0.2, 0.2)

[node name="AvatarDisplay" type="TextureRect" parent="Players/Player1/Panel"]
clip_contents = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
offset_left = 331.0
offset_top = 265.0
offset_right = 441.0
offset_bottom = 375.0
theme = ExtResource("8_mo4it")

[node name="NameLabel" type="Label" parent="Players/Player1/Panel"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_top = 210.0
offset_right = 180.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("1_yk4l7")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="ChipCountLabel" type="Label" parent="Players/Player1/Panel"]
custom_minimum_size = Vector2(60, 17)
layout_mode = 0
offset_left = 323.0
offset_top = 374.0
offset_right = 383.0
offset_bottom = 391.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="Players/Player1/Panel"]
custom_minimum_size = Vector2(174, 10)
layout_mode = 1
offset_left = 299.0
offset_top = 332.0
offset_right = 473.0
offset_bottom = 342.0
show_percentage = false

[node name="NamePanel" type="TextureRect" parent="Players/Player1/Panel"]
custom_minimum_size = Vector2(174, 34)
layout_mode = 0
offset_left = 299.0
offset_top = 341.0
offset_right = 473.0
offset_bottom = 375.0
texture = ExtResource("13_t8b8a")
expand_mode = 1

[node name="ChipCountBar" type="TextureRect" parent="Players/Player1/Panel"]
custom_minimum_size = Vector2(77, 19)
layout_mode = 0
offset_left = 309.0
offset_top = 374.0
offset_right = 386.0
offset_bottom = 393.0
texture = ExtResource("14_jx1aq")
expand_mode = 1

[node name="LevelBar" type="TextureRect" parent="Players/Player1/Panel"]
custom_minimum_size = Vector2(77, 19)
layout_mode = 0
offset_left = 386.0
offset_top = 374.0
offset_right = 463.0
offset_bottom = 393.0
texture = ExtResource("15_ywrf8")
expand_mode = 1

[node name="Cards" type="HBoxContainer" parent="Players/Player1"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
offset_left = 346.0
offset_top = 273.0
offset_right = 426.0
offset_bottom = 353.0
alignment = 1

[node name="Card1" type="TextureRect" parent="Players/Player1/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Card2" type="TextureRect" parent="Players/Player1/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Player2" type="Control" parent="Players"]
anchors_preset = 0
offset_left = -280.0
offset_top = -44.0
offset_right = -280.0
offset_bottom = -44.0
script = ExtResource("2_2n16t")

[node name="Panel" type="Panel" parent="Players/Player2"]
layout_mode = 0
theme = ExtResource("5_sdmxq")

[node name="ChipStackDisplay" parent="Players/Player2/Panel" instance=ExtResource("9_msske")]
position = Vector2(180, -60)
scale = Vector2(0.3, 0.3)

[node name="AvatarBackground" type="TextureRect" parent="Players/Player2/Panel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 353.0
texture = ExtResource("10_vywew")
expand_mode = 1

[node name="AvatarBorder" type="TextureRect" parent="Players/Player2/Panel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 353.0
texture = ExtResource("10_5g7l1")
expand_mode = 1

[node name="AvatarViewport" type="SubViewport" parent="Players/Player2/Panel"]
transparent_bg = true
size = Vector2i(180, 280)

[node name="AvatarScene" parent="Players/Player2/Panel/AvatarViewport" instance=ExtResource("6_5d3nm")]
custom_minimum_size = Vector2(180, 240)
offset_top = 90.0
offset_right = 180.0
offset_bottom = 330.0
scale = Vector2(0.2, 0.2)

[node name="AvatarDisplay" type="TextureRect" parent="Players/Player2/Panel"]
clip_contents = true
custom_minimum_size = Vector2(88, 88)
layout_mode = 1
offset_left = 331.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 353.0
theme = ExtResource("8_mo4it")

[node name="NameLabel" type="Label" parent="Players/Player2/Panel"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_top = 210.0
offset_right = 180.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("1_yk4l7")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="ChipCountLabel" type="Label" parent="Players/Player2/Panel"]
custom_minimum_size = Vector2(60, 17)
layout_mode = 0
offset_left = 323.0
offset_top = 374.0
offset_right = 383.0
offset_bottom = 391.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="Players/Player2/Panel"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 1
offset_right = 80.0
offset_bottom = 20.0
show_percentage = false

[node name="NamePanel" type="TextureRect" parent="Players/Player2/Panel"]
custom_minimum_size = Vector2(174, 34)
layout_mode = 0
offset_left = 299.0
offset_top = 341.0
offset_right = 473.0
offset_bottom = 375.0
texture = ExtResource("13_t8b8a")
expand_mode = 1

[node name="ChipCountBar" type="TextureRect" parent="Players/Player2/Panel"]
custom_minimum_size = Vector2(77, 19)
layout_mode = 0
offset_left = 309.0
offset_top = 374.0
offset_right = 386.0
offset_bottom = 393.0
texture = ExtResource("14_jx1aq")
expand_mode = 1

[node name="Cards" type="HBoxContainer" parent="Players/Player2"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
offset_left = 346.0
offset_top = 273.0
offset_right = 426.0
offset_bottom = 353.0
alignment = 1

[node name="Card1" type="TextureRect" parent="Players/Player2/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Card2" type="TextureRect" parent="Players/Player2/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Player3" type="Control" parent="Players"]
anchors_preset = 0
offset_left = -280.0
offset_top = -210.0
offset_right = -280.0
offset_bottom = -210.0
script = ExtResource("2_2n16t")

[node name="Panel" type="Panel" parent="Players/Player3"]
layout_mode = 0
theme = ExtResource("5_sdmxq")

[node name="ChipStackDisplay" parent="Players/Player3/Panel" instance=ExtResource("9_msske")]
position = Vector2(180, -60)
scale = Vector2(0.3, 0.3)

[node name="AvatarBackground" type="TextureRect" parent="Players/Player3/Panel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 353.0
texture = ExtResource("10_vywew")
expand_mode = 1

[node name="AvatarBorder" type="TextureRect" parent="Players/Player3/Panel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 353.0
texture = ExtResource("10_5g7l1")
expand_mode = 1

[node name="AvatarViewport" type="SubViewport" parent="Players/Player3/Panel"]
transparent_bg = true
size = Vector2i(180, 280)

[node name="AvatarScene" parent="Players/Player3/Panel/AvatarViewport" instance=ExtResource("6_5d3nm")]
custom_minimum_size = Vector2(180, 240)
offset_top = 90.0
offset_right = 180.0
offset_bottom = 330.0
scale = Vector2(0.2, 0.2)

[node name="AvatarDisplay" type="TextureRect" parent="Players/Player3/Panel"]
clip_contents = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
offset_left = 331.0
offset_top = 265.0
offset_right = 441.0
offset_bottom = 375.0
theme = ExtResource("8_mo4it")

[node name="NameLabel" type="Label" parent="Players/Player3/Panel"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_top = 210.0
offset_right = 180.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("1_yk4l7")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="ChipCountLabel" type="Label" parent="Players/Player3/Panel"]
custom_minimum_size = Vector2(60, 17)
layout_mode = 0
offset_left = 323.0
offset_top = 374.0
offset_right = 383.0
offset_bottom = 391.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="Players/Player3/Panel"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 1
offset_right = 80.0
offset_bottom = 20.0
show_percentage = false

[node name="NamePanel" type="TextureRect" parent="Players/Player3/Panel"]
custom_minimum_size = Vector2(174, 34)
layout_mode = 0
offset_left = 299.0
offset_top = 341.0
offset_right = 473.0
offset_bottom = 375.0
texture = ExtResource("13_t8b8a")
expand_mode = 1

[node name="ChipCountBar" type="TextureRect" parent="Players/Player3/Panel"]
custom_minimum_size = Vector2(77, 19)
layout_mode = 0
offset_left = 309.0
offset_top = 374.0
offset_right = 386.0
offset_bottom = 393.0
texture = ExtResource("14_jx1aq")
expand_mode = 1

[node name="Cards" type="HBoxContainer" parent="Players/Player3"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
offset_left = 346.0
offset_top = 273.0
offset_right = 426.0
offset_bottom = 353.0
alignment = 1

[node name="Card1" type="TextureRect" parent="Players/Player3/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Card2" type="TextureRect" parent="Players/Player3/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Player5" type="Control" parent="Players"]
anchors_preset = 0
offset_left = 280.0
offset_top = -210.0
offset_right = 280.0
offset_bottom = -210.0
script = ExtResource("2_2n16t")

[node name="Panel" type="Panel" parent="Players/Player5"]
layout_mode = 0
theme = ExtResource("5_sdmxq")

[node name="ChipStackDisplay" parent="Players/Player5/Panel" instance=ExtResource("9_msske")]
position = Vector2(180, -60)
scale = Vector2(0.3, 0.3)

[node name="AvatarBackground" type="TextureRect" parent="Players/Player5/Panel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 353.0
texture = ExtResource("10_vywew")
expand_mode = 1

[node name="AvatarBorder" type="TextureRect" parent="Players/Player5/Panel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 353.0
texture = ExtResource("10_5g7l1")
expand_mode = 1

[node name="AvatarViewport" type="SubViewport" parent="Players/Player5/Panel"]
transparent_bg = true
size = Vector2i(180, 280)

[node name="AvatarScene" parent="Players/Player5/Panel/AvatarViewport" instance=ExtResource("6_5d3nm")]
custom_minimum_size = Vector2(180, 240)
offset_top = 90.0
offset_right = 180.0
offset_bottom = 330.0
scale = Vector2(0.2, 0.2)

[node name="AvatarDisplay" type="TextureRect" parent="Players/Player5/Panel"]
clip_contents = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
offset_left = 331.0
offset_top = 265.0
offset_right = 441.0
offset_bottom = 375.0
theme = ExtResource("8_mo4it")

[node name="NameLabel" type="Label" parent="Players/Player5/Panel"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_top = 210.0
offset_right = 180.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("1_yk4l7")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="ChipCountLabel" type="Label" parent="Players/Player5/Panel"]
custom_minimum_size = Vector2(60, 17)
layout_mode = 0
offset_left = 323.0
offset_top = 374.0
offset_right = 383.0
offset_bottom = 391.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="Players/Player5/Panel"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 1
offset_right = 80.0
offset_bottom = 20.0
show_percentage = false

[node name="NamePanel" type="TextureRect" parent="Players/Player5/Panel"]
custom_minimum_size = Vector2(174, 34)
layout_mode = 0
offset_left = 299.0
offset_top = 341.0
offset_right = 473.0
offset_bottom = 375.0
texture = ExtResource("13_t8b8a")
expand_mode = 1

[node name="ChipCountBar" type="TextureRect" parent="Players/Player5/Panel"]
custom_minimum_size = Vector2(77, 19)
layout_mode = 0
offset_left = 309.0
offset_top = 374.0
offset_right = 386.0
offset_bottom = 393.0
texture = ExtResource("14_jx1aq")
expand_mode = 1

[node name="Cards" type="HBoxContainer" parent="Players/Player5"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
offset_left = 346.0
offset_top = 273.0
offset_right = 426.0
offset_bottom = 353.0
alignment = 1

[node name="Card1" type="TextureRect" parent="Players/Player5/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Card2" type="TextureRect" parent="Players/Player5/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Player4" type="Control" parent="Players"]
anchors_preset = 0
offset_top = -260.0
offset_bottom = -260.0
script = ExtResource("2_2n16t")

[node name="Panel" type="Panel" parent="Players/Player4"]
layout_mode = 0
theme = ExtResource("5_sdmxq")

[node name="ChipStackDisplay" parent="Players/Player4/Panel" instance=ExtResource("9_msske")]
position = Vector2(180, -60)
scale = Vector2(0.3, 0.3)

[node name="AvatarBackground" type="TextureRect" parent="Players/Player4/Panel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 353.0
texture = ExtResource("10_vywew")
expand_mode = 1

[node name="AvatarBorder" type="TextureRect" parent="Players/Player4/Panel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 0
offset_left = 331.0
offset_top = 265.0
offset_right = 419.0
offset_bottom = 353.0
texture = ExtResource("10_5g7l1")
expand_mode = 1

[node name="AvatarViewport" type="SubViewport" parent="Players/Player4/Panel"]
transparent_bg = true
size = Vector2i(180, 280)

[node name="AvatarScene" parent="Players/Player4/Panel/AvatarViewport" instance=ExtResource("6_5d3nm")]
custom_minimum_size = Vector2(180, 240)
offset_top = 90.0
offset_right = 180.0
offset_bottom = 330.0
scale = Vector2(0.2, 0.2)

[node name="AvatarDisplay" type="TextureRect" parent="Players/Player4/Panel"]
clip_contents = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
offset_left = 331.0
offset_top = 265.0
offset_right = 441.0
offset_bottom = 375.0
theme = ExtResource("8_mo4it")

[node name="NameLabel" type="Label" parent="Players/Player4/Panel"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_top = 210.0
offset_right = 180.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("1_yk4l7")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="ChipCountLabel" type="Label" parent="Players/Player4/Panel"]
custom_minimum_size = Vector2(60, 17)
layout_mode = 0
offset_left = 323.0
offset_top = 374.0
offset_right = 383.0
offset_bottom = 391.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="Players/Player4/Panel"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 1
offset_right = 80.0
offset_bottom = 20.0
show_percentage = false

[node name="NamePanel" type="TextureRect" parent="Players/Player4/Panel"]
custom_minimum_size = Vector2(139, 34)
layout_mode = 0
offset_left = 299.0
offset_top = 341.0
offset_right = 473.0
offset_bottom = 375.0
texture = ExtResource("13_t8b8a")
expand_mode = 1

[node name="ChipCountBar" type="TextureRect" parent="Players/Player4/Panel"]
custom_minimum_size = Vector2(77, 19)
layout_mode = 0
offset_left = 309.0
offset_top = 374.0
offset_right = 386.0
offset_bottom = 393.0
texture = ExtResource("14_jx1aq")
expand_mode = 1

[node name="Cards" type="HBoxContainer" parent="Players/Player4"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
offset_left = 346.0
offset_top = 273.0
offset_right = 426.0
offset_bottom = 353.0
alignment = 1

[node name="Card1" type="TextureRect" parent="Players/Player4/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Card2" type="TextureRect" parent="Players/Player4/Cards"]
custom_minimum_size = Vector2(37, 55)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Pot" type="Control" parent="."]
custom_minimum_size = Vector2(120, 55)
anchors_preset = 0
offset_left = 481.0
offset_top = 167.0
offset_right = 536.0
offset_bottom = 222.0

[node name="PotLabel" type="Label" parent="Pot"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
offset_top = 32.0
offset_right = 1.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 10
autowrap_mode = 3

[node name="PotChipDisplay" parent="Pot" instance=ExtResource("20_rbrap")]
scale = Vector2(0.3, 0.3)
script = ExtResource("14_xfeto")

[node name="DealerButton" type="TextureRect" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 260.0
offset_top = 320.0
offset_right = 290.0
offset_bottom = 350.0
texture = ExtResource("2_e42vm")
expand_mode = 1

[node name="ActionUI" type="Control" parent="."]
anchors_preset = 0
offset_left = 562.0
offset_top = 324.0
offset_right = 562.0
offset_bottom = 324.0
script = ExtResource("3_gh18n")

[node name="ActionButtons" type="HBoxContainer" parent="ActionUI"]
custom_minimum_size = Vector2(76, 44)
layout_mode = 2
offset_left = -30.0
offset_right = 500.0
offset_bottom = 60.0
theme_override_constants/separation = 8

[node name="BetAmount" type="SpinBox" parent="ActionUI/ActionButtons"]
custom_minimum_size = Vector2(76, 44)
layout_mode = 2
theme = ExtResource("11_xotbv")
step = 500.0
rounded = true
alignment = 1

[node name="FoldButton" type="Button" parent="ActionUI/ActionButtons"]
custom_minimum_size = Vector2(76, 44)
layout_mode = 2
theme = ExtResource("7_krkxb")
text = "Fold"

[node name="CheckCallButton" type="Button" parent="ActionUI/ActionButtons"]
custom_minimum_size = Vector2(76, 44)
layout_mode = 2
theme = ExtResource("7_krkxb")
text = "Check"

[node name="RaiseButton" type="Button" parent="ActionUI/ActionButtons"]
custom_minimum_size = Vector2(76, 44)
layout_mode = 2
theme = ExtResource("8_d8q51")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Raise"
text_overrun_behavior = 3
autowrap_mode = 3

[node name="BetControl" type="VBoxContainer" parent="ActionUI"]
custom_minimum_size = Vector2(20, 202)
layout_mode = 2
offset_left = 228.0
offset_top = -230.0
offset_right = 294.0
offset_bottom = -28.0
alignment = 2

[node name="BetSlider" type="VSlider" parent="ActionUI/BetControl"]
custom_minimum_size = Vector2(20, 202)
layout_mode = 2
theme = SubResource("Theme_ei1b7")
theme_override_icons/grabber = ExtResource("24_ye770")
theme_override_icons/grabber_highlight = ExtResource("24_ye770")
step = 500.0
rounded = true

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_7l7kt")

[node name="BookButton" parent="." instance=ExtResource("19_85r61")]
custom_minimum_size = Vector2(77, 19)
offset_left = 386.0
offset_top = 374.0
offset_right = 463.0
offset_bottom = 393.0

[node name="ReturnToLobbyButton" type="Button" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_right = 11.0
offset_bottom = 19.0
theme = ExtResource("7_krkxb")
text = "L"
